<resources>
    <string name="app_name">鱼眼</string>
    <string name="constellation_prompt_message">请先去设置生日</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="order_status_not_pay">待付款</string>
    <string name="order_status_not_shipped">待发货</string>
    <string name="order_status_already_shipped">已发货</string>
    <string name="order_status_already_completed">已完成</string>
    <string name="order_status_unknown">未知状态</string>
    <string name="order_all">全部</string>
    <string name="order_not_pay">待付款</string>
    <string name="order_not_shipped">待发货</string>
    <string name="order_already_shipped">已发货</string>
    <string name="order_already_completed">已完成</string>
    <string name="mall_recommend">推荐</string>
    <string name="mall_classify">分类</string>
    <string name="mall_shopping_cart">购物车</string>
    <string name="mall_ware_detailed_shopping_cart_add">加入购物车</string>
    <string name="mall_ware_detailed_buy_immediately">立即购买</string>
    <string name="shopping_cart_settle_accounts">结算</string>
    <string name="shopping_cart_check_all">全选</string>
    <string name="shopping_cart_my">我的购物车</string>
    <string name="order_confirm">订单确认</string>
    <string name="order_confirm_amount">合计</string>
    <string name="order_confirm_immediate_order">立即下单</string>
    <string name="order_confirm_receipt_address">收货地址</string>
    <string name="order_confirm_receipt_address_subhead">请填写收货地址</string>
    <string name="order_confirm_name">姓名：%s</string>
    <string name="order_confirm_telephone">手机号：%s</string>
    <string name="order_confirm_receipt_address_info">收货地址：%s</string>
    <string name="receipt_address">管理收货地址</string>
    <string name="receipt_address_add">添加新地址</string>
    <string name="receipt_address_default_address">默认地址</string>
    <string name="receipt_address_edit">编辑</string>
    <string name="receipt_address_delete">删除</string>
    <string name="receipt_address_new">新建地址</string>
    <string name="receipt_address_new_actionbar_right_txt">保存</string>
    <string name="receipt_address_new_setting_default_address">设为默认地址</string>
    <string name="receipt_address_new_hint_name">收货人姓名</string>
    <string name="receipt_address_new_hint_telephone">联系电话</string>
    <string name="receipt_address_new_hint_city">省份、城市</string>
    <string name="receipt_address_new_hint_address">请填写详细地址 不少于5个字</string>
    <string name="receipt_address_new_name_prompt_empty">请输入收货人姓名</string>
    <string name="receipt_address_new_name_prompt_length_max">收货人姓名最多%s个字</string>
    <string name="receipt_address_new_telephone_prompt_empty">请输入联系电话</string>
    <string name="receipt_address_new_city_prompt_empty">请选择省份、城市</string>
    <string name="receipt_address_new_address_prompt_empty">请填写详细地址 不少于5个字</string>
    <string name="receipt_address_new_address_prompt_length_max">详细地址最多%s个字</string>
    <string name="receipt_address_new_send_loading">发送中&#8230;</string>
    <string name="receipt_address_new_update_loading">修改中&#8230;</string>
    <string name="receipt_address_new_prompt_failure">创建收货地址失败</string>
    <string name="receipt_address_new_update_prompt_failure">修改收货地址失败</string>
    <string name="order_buy">订单支付</string>
    <string name="order_buy_order_info">订单信息</string>
    <string name="order_buy_inventory">购物清单</string>
    <string name="order_buy_order_prompt_html"><Data><![CDATA[<span>重要提示：请在<font color="#ff0000">24小时</font>内完成支付，超时订单将自动取消。我们将再您完成支付后的72小时内发货。</span>]]></Data></string>
    <string name="order_buy_inventory_subhead_1">共计</string>
    <string name="order_buy_inventory_subhead_3">件商品</string>
    <string name="order_buy_carriage">运费</string>
    <string name="order_buy_payable_price">应付金额</string>
    <string name="order_buy_pay_model">请选择支付方式</string>
    <string name="order_buy_pay_model_wechat">微信支付</string>
    <string name="dialog_order_buy_cancel">取消</string>
    <string name="dialog_order_pay_btn_text">立即支付</string>
    <string name="dialog_order_pay_btn_complete">支付成功</string>
    <string name="dialog_order_pay_btn_error">支付失败</string>
    <string name="dialog_order_pay_btn_cancel">支付取消</string>
    <string name="dialog_order_buy_btn_complete">购买成功</string>
    <string name="item_order_pay_count">数量</string>
    <string name="shopping_cart_subtract">&#045;</string>
    <string name="shopping_cart_add">&#043;</string>
    <string name="mall_ware">商品</string>
    <string name="my_nickname">昵称</string>
    <string name="my_nickname_update"><u>点此更改昵称</u></string>
    <string name="logout">退出登录</string>
    <string name="login">登录</string>
    <string name="main_toolbar_tv_main">主页</string>
    <string name="main_toolbar_tv_my">我的</string>
    <string name="main_toolbar_tv_order">订单</string>
    <string name="main_toolbar_tv_setting">设置</string>
    <string name="setting_tv_version">版本信息</string>
    <string name="setting_tv_cache">清除缓存</string>
    <string name="setting_tv_suggestion">意见反馈</string>
    <string name="setting_tv_about_us">关于我们</string>
    <string name="setting_tv_privacy_clause">服务条款与隐私政策</string>
    <string name="setting_cache_success">清除缓存成功!</string>
    <string name="my_tv_real_name">真实姓名</string>
    <string name="my_tv_sex">性别</string>
    <string name="my_tv_birthday">生日</string>
    <string name="my_tv_update_phone">修改手机号</string>
    <string name="my_tv_update_pwd">修改密码</string>
    <string name="my_tv_harvest_address">收获地址</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="forget_pwd_underline"><u>忘记密码</u></string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="sign_reset_pwd">忘记密码</string>
    <string name="sign_up_btn">完成</string>
    <string name="sgin_tv_graph_identifying_code_title">图形码</string>
    <string name="sgin_tv_graph_identifying_code_hint">请输入图形码</string>
    <string name="sgin_tv_graph_identifying_code_fail">图形码不正确</string>
    <string name="sgin_tv_graph_identifying_code_refresh_failure">图形码刷新失败,请重试</string>
    <string name="sgin_tv_sms_code_title">验证码</string>
    <string name="sgin_tv_sms_code_hint">请输入验证码</string>
    <string name="sgin_tv_sms_code_fail">验证码码不正确</string>
    <string name="btn_complete">操作成功</string>
    <string name="btn_failure">操作失败</string>
    <string name="update_check_error">更新应用失败</string>
    <string name="update_check_no">已经是最新的版本啦</string>
    <string name="mall_ware_detailed_prompt_model_empty">选择商品分类</string>
    <string name="shoppingcart_prompt_add_complete">成功加入购物车</string>
    <string name="shoppingcart_prompt_add_already_exist">购物车中数量+1</string>
    <string name="shoppingcart_prompt_add_failure">加入购物车失败</string>
    <string name="shoppingcart_prompt_delete_complete">删除成功</string>
    <string name="shoppingcart_prompt_delete_failure">删除失败</string>
    <string name="shoppingcart_prompt_check_null">您还没有选择物品呢!</string>
    <string name="shoppingcart_prompt_address_null">您还没有选择地址呢!</string>
    <string name="shoppingcart_prompt_create_order_loading">创建订单中&#8230;</string>
    <string name="shoppingcart_prompt_create_order_complete">创建订单成功</string>
    <string name="shoppingcart_prompt_create_order_failure">创建订单失败</string>
    <string name="order_confirm_get_order_failure">获取订单信息失败</string>
    <string name="custom_icon_default">&#xe605;</string>
    <string name="custom_icon_success">&#xe60e;</string>
    <string name="custom_icon_error">&#xe607;</string>
    <string name="custom_icon_warning">&#xe60d;</string>
    <string name="fragment_sgin_tv_close">&#xe607;</string>
    <string name="business_card_holder_2_create_telephone_prompt">请输入手机号码</string>
    <string name="sign_phone_exist">手机号已存在</string>
    <string name="sign_phone_exist_no">手机号不存在</string>
    <string name="update_phone">修改新手机号码</string>
    <string name="update_phone_hint">修改手机号码</string>
    <string name="update_phone_description">请输入旧手机号码</string>
    <string name="update_phone_next_step">下一步</string>
    <string name="update_new_phone">新手机号码</string>
    <string name="update_new_phone_description">请输入新手机号码</string>
    <string name="update_new_phone_code_btn_save">确认修改</string>
    <string name="update_new_phone_code_btn_save_success">修改成功</string>
    <string name="update_new_phone_code_btn_save_error">修改失败</string>
    <string name="fragment_sgin_ce_phoneold_falseness">旧号码不正确!</string>
    <string name="fragment_sgin_ce_phoneold_success">验证成功</string>
    <string name="send_verification_code_success">发送成功!</string>
    <string name="send_verification_code_error">发送失败!</string>
    <string name="sign_in_phone_falseness">号码不正确!</string>
    <string name="sign_in_password_intensity_prompt_min">密码强度最少6位</string>
    <string name="sign_in_password_intensity_prompt_max">密码强度最多18位</string>
    <string name="sign_in_password_intensity_error_prompt">密码错误</string>
    <string name="unknown_code_2012">未知错误(code:-2012)提示建议:重新输入手机号</string>
    <string name="unknown_code_3011">未知错误(code:-3011)提示建议:重新登录</string>
    <string name="unknown_code_3012">未知错误(code:-3012)提示建议:重新登录</string>
    <string name="unknown_code_3013">未知错误(code:-3013)提示建议:重新登录</string>
    <string name="unknown_code_3014">未知错误(code:-3014)提示建议:重新登录</string>
    <string name="unknown_code_3015">未知错误(code:-3015)提示建议:重新登录</string>
    <string name="sign_up_btn_send_verification_code_success">发送成功!</string>
    <string name="sign_up_btn_send_verification_code_error">发送失败!</string>
    <string name="sign_up_btn_send_verification_code_no">图形码不正确</string>
    <string name="sign_up_btn_send_sms_code_no">验证码不正确</string>
    <string name="sign_up_et_image_code_hint">请输入图形码</string>
    <string name="sign_up_et_sms_code_hint">请输入短信验证码</string>
    <string name="sign_up_et_new_password_hint">请输入新密码</string>
    <string name="update_pwd">修改密码</string>
    <string name="update_pwd_old_title">旧密码</string>
    <string name="update_pwd_old_description">请输入旧密码</string>
    <string name="update_pwd_new_title">新密码</string>
    <string name="update_pwd_new_description">请输入新密码</string>
    <string name="update_pwd_update">修改</string>
    <string name="update_pwd_update_success">修改成功</string>
    <string name="update_pwd_update_error">修改失败</string>
    <string name="update_sex">设置性别</string>
    <string name="sex_1">男</string>
    <string name="sex_2">女</string>
    <string name="sex_3">保密</string>
    <string name="update_nickname">设置昵称</string>
    <string name="update_nickname_title">昵称</string>
    <string name="update_nickname_description">请输入昵称</string>
    <string name="update_nickname_save">保存</string>
    <string name="update_nickname_save_success">保存成功</string>
    <string name="update_nickname_save_error">保存失败</string>
    <string name="update_nickname_exist">昵称已存在</string>
    <string name="update_nickname_rule">1&#8211;12个字符，支持中英文、数字、"_"或减号</string>
    <string name="update_real_name">设置真实姓名</string>
    <string name="update_real_name_title">姓名</string>
    <string name="update_real_name_description">请输入姓名</string>
    <string name="update_real_name_length">请输入正确的名字</string>
    <string name="feedback_edittext_hint">请输入反馈意见</string>
    <string name="feedback_btn_text">提交</string>
    <string name="feedback_btn_text_complete">提交成功</string>
    <string name="feedback_btn_text_failure">提交失败</string>
    <string name="feedback_content_length_max">反馈内容400字以内</string>
    <string name="feedback_edittext_action_done">确认</string>
    <string name="listview_2_empty_message">@string/list_data_not</string>
    <string name="listview_2_loading_message">正在加载</string>
    <string name="listview_2_error_message">加载失败</string>
    <string name="listview_2_empty_button">轻触重试</string>
    <string name="listview_2_loading_button">取消</string>
    <string name="listview_2_error_button">轻触重试</string>
    <string name="photo_choose_dialog_top">图库</string>
    <string name="photo_choose_dialog_bottom">拍照</string>
    <string name="photo_choose_dialog_cancel">取消</string>
</resources>