<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_update_bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_header"
        style="@style/fragment_sign_ll_header">

        <TextView
            android:id="@+id/tv_return_code"
            style="@style/fragment_sign_tv_close"
            android:text="@string/head_layout_left_return_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/wb_update_tv_title"
        style="@style/fragment_sign_tv_title"
        android:text="@string/update_new_phone" />

    <EditText
        android:id="@+id/wb_update_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/custom_edittext_margin_left_right"
        android:layout_marginRight="@dimen/custom_edittext_margin_left_right"
        android:layout_marginTop="@dimen/fragment_sign_in_margin_top_bottom"
        android:background="@drawable/sign_edittext_bg"
        android:gravity="center"
        android:hint="@string/sign_up_et_sms_code_hint"
        android:inputType="number"
        android:padding="6dp"
        android:singleLine="true"
        android:textColor="@color/theme_black"
        android:textColorHint="@color/theme_gray"
        android:textSize="@dimen/theme_12_small" />

    <com.iyuile.circularprogressbutton.CircularProgressButton
        android:id="@+id/wb_update_btn_save"
        style="@style/btn_CircularProgressButton"
        android:layout_marginBottom="@dimen/fragment_sign_in_margin_top_bottom"
        android:layout_marginTop="@dimen/fragment_sign_in_margin_top_bottom"
        custom:cpb_selectorIdle="@color/theme_btn_gray"
        custom:cpb_textComplete="@string/update_new_phone_code_btn_save_success"
        custom:cpb_textError="@string/update_new_phone_code_btn_save_error"
        custom:cpb_textIdle="@string/update_new_phone_code_btn_save" />

</LinearLayout>