<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/feedback_bg_gray_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <com.iyuile.caelum.view.CircularImageView
            android:id="@+id/iv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/no_img_user"
            custom:border_color="@android:color/white"
            custom:border_width="0dp"
            custom:shadow="true" />

        <TextView
            android:id="@+id/wb_tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/theme_black_deep"
            android:textSize="@dimen/theme_18_h3" />

        <EditText
            android:id="@+id/wb_et_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/feedback_edittext_bg"
            android:gravity="left|top"
            android:hint="@string/feedback_edittext_hint"
            android:imeActionLabel="@string/feedback_edittext_action_done"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:maxLength="400"
            android:maxLines="8"
            android:minLines="8"
            android:textColor="@color/theme_black_deep"
            android:textSize="@dimen/theme_12_small" />

        <com.iyuile.circularprogressbutton.CircularProgressButton
            android:id="@+id/wb_btn_submit"
            style="@style/btn_CircularProgressButton"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="20dp"
            custom:cpb_selectorIdle="@color/theme_btn_gray"
            custom:cpb_textComplete="@string/feedback_btn_text_complete"
            custom:cpb_textError="@string/feedback_btn_text_failure"
            custom:cpb_textIdle="@string/feedback_btn_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:padding="16dp"
        android:text="@string/fragment_sgin_tv_close"
        android:textColor="@color/theme_black"
        android:textSize="@dimen/theme_20" />

</FrameLayout>