<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".activity.ReceiptAddressNewActivity">

    <include
        android:id="@+id/actionbar"
        layout="@layout/include_action_bar_2" />

    <EditText
        android:id="@+id/wb_et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/receipt_address_new_edittext_bg_white_shadow"
        android:hint="@string/receipt_address_new_hint_name"
        android:maxLines="1"
        android:padding="12dp"
        android:singleLine="true"
        android:textColor="@color/theme_black"
        android:textColorHint="@color/theme_gray_deep"
        android:textSize="@dimen/theme_16_title" />

    <EditText
        android:id="@+id/wb_et_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/receipt_address_new_edittext_bg_white_shadow"
        android:hint="@string/receipt_address_new_hint_telephone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12dp"
        android:singleLine="true"
        android:textColor="@color/theme_black"
        android:textColorHint="@color/theme_gray_deep"
        android:textSize="@dimen/theme_16_title" />

    <LinearLayout
        android:id="@+id/ll_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/receipt_address_new_edittext_bg_white_shadow"
        android:orientation="horizontal"
        android:padding="12dp">

        <EditText
            android:id="@+id/wb_et_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/receipt_address_new_hint_city"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/theme_black"
            android:textColorHint="@color/theme_gray_deep"
            android:textSize="@dimen/theme_16_title" />

        <TextView
            android:id="@+id/icon_indicate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/icon_return_right"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/theme_16_title" />

    </LinearLayout>

    <EditText
        android:id="@+id/wb_et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/receipt_address_new_edittext_bg_white_shadow"
        android:gravity="left|top"
        android:hint="@string/receipt_address_new_hint_address"
        android:maxLength="500"
        android:maxLines="5"
        android:minLines="5"
        android:padding="12dp"
        android:textColor="@color/theme_black"
        android:textColorHint="@color/theme_gray_deep"
        android:textSize="@dimen/theme_16_title" />

    <RadioButton
        android:id="@+id/wb_btn_default_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/receipt_address_new_setting_default_address"
        android:textColor="@color/theme_black"
        android:textSize="@dimen/theme_14_text" />

</LinearLayout>
