<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.SplashActivity">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/theme_40_h1" />

    <LinearLayout
        android:id="@+id/ll_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/btn_white_bg"
            android:padding="4dp"
            android:text="@string/sign_in"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/theme_18_h3" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_white_bg"
            android:padding="4dp"
            android:text="@string/sign_up"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/theme_18_h3" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="6dp"
            android:text="@string/forget_pwd_underline"
            android:textColor="@color/theme_black"
            android:textSize="@dimen/theme_14_text"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_launch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/sign_bg"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ll_sign"
        android:layout_toEndOf="@+id/ll_sign"/>

</RelativeLayout>